--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@storybook/web-components-vite": "^8.4.7",
     "@types/node": "^22.14.1",
     "@vitest/browser": "^3.1.1",
+    "autoprefixer": "^10.4.16",
+    "lit": "^3.1.0",
     "msw": "^2.7.4",
     "msw-storybook-addon": "^2.0.4",
     "playwright": "1.48.0",
+    "postcss": "^8.5.3",
     "shadow-dom-testing-library": "1.11.3",
     "storybook": "^8.4.7",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.8.3",
     "vitest": "^3.1.1"
   }
