Refactor Tailwind utility and add CSS module typing.
Refactored `withTailwind` function to improve style handling by normalizing the base class styles into an array. Added a TypeScript declaration for importing inline CSS modules, enhancing type safety and better developer experience.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,6 @@ jobs:
       - run: npm ci
       - run: npx playwright install
       - run: npm run generate
+      - run: npm run compile
       - run: npm test
       - run: cat pacts/todo-pact.json
