Refactor Todo app to include user API integration
Added support for fetching and displaying the current user using a newly implemented userClient and GetCurrentUser API. Refactored some functions to separate Todo and User logic, updated scripts for generating code, and improved modularity by organizing API clients into distinct namespaces.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "compile": "tsc",
     "test": "vitest run",
-    "generate": "wirespec compile -i ./wirespec -o ./src/gen -l TypeScript -p ''",
+    "generate": "npm run generate:todo && npm run generate:user ",
+    "generate:todo": "wirespec compile -i ./wirespec -o ./src/gen/todo -l TypeScript -p ''",
+    "generate:user": "wirespec convert OpenApiv3 -i ./openapi/user.json -o ./src/gen/user -l TypeScript -p ''",
     "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
